--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Binance Summoning Circle</title>
+  <title>Summoning Circle</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,9 +12,8 @@
   <div class="circle" id="circle"></div>
 
   <div class="buttons">
-    <button onclick="window.open('https://twitter.com/', '_blank')">Twitter</button>
-    <button onclick="window.open('https://twitter.com/i/communities', '_blank')">Twitter Comm</button>
-    <button onclick="copyCA()">Copy CA</button>
+    <button onclick="window.open('https://twitter.com/', '_blank')">西</button>
+    <button onclick="copyCA()">合约地址</button>
   </div>
 
   <audio id="music" src="dorime.mp3" loop></audio>
@@ -22,5 +21,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-
