--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="circle" id="circle"></div>
 
   <div class="buttons">
-    <button onclick="window.open('https://twitter.com/', '_blank')">西</button>
+    <button onclick="window.open('https://x.com/summoningbsc', '_blank')">西</button>
     <button onclick="copyCA()">合约地址</button>
   </div>
 
@@ -21,3 +21,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
